--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"dependencies": {
 		"@companion-module/base": "~1.11.2",
+		"eventemitter3": "^5.0.1",
 		"ws": "^8.18.1"
 	},
 	"devDependencies": {
